# TongUI-agent

./: .gitignore  README.md  pyproject.toml
configs/training/: sft_3b.yaml  sft_tiny.yaml
data/: dataset_info.json
docs/: experiments.md  train.md
examples/: api.py  call_vllm.py  inference.py
examples/experiments/: aitw.sh
scripts/: download.sh
scripts/evaluation/: run_mind2web_vllm.py  run_screenspot_2_vllm.py  run_screenspot_pro_vllm.py  run_screenspot_vllm_uitars.py
synapse/: Doc.md
synapse/envs/miniwob/: instance.py
synapse/envs/miniwob/html/core/: core_large.css
tests/: test_call_vllm.py
tongui/: utils.py
tongui/data/: dset_mind2web.py  dset_screenspot.py
tongui/data/template/: screenspot.py
tongui/eval/: eval_mind2web_utils.py
tongui/utils/: qwen.py
